--- a/libraryworld_export.ipynb
+++ b/libraryworld_export.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "id": "4834e0e7-6279-464b-94de-d0f55cb4afb3",
    "metadata": {},
    "outputs": [
@@ -27,57 +27,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "id": "1b1d17ae-e2a8-45c8-ac49-bfb9c5db93da",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "00776     2200193 i 4500001000900000003000700009005001700016020001500033040002400048090003000072092000800102100002400110245017400134264003500308300001200343520020100355920000900556923001700565\u001e",
-      "65277343\u001e",
-      "MePoLT\u001e",
-      "20250509182141.0\u001e",
-      "  \u001fa0674994787\u001e",
-      "  \u001faMePoLT\u001fcMePoLT\u001ferda\u001e",
-      " 4\u001faLOEB-PA 6121 .A4 1935 v.2\u001e",
-      " 4\u001fa808\u001e",
-      "1 \u001faPoets, Minor Latin.\u001e",
-      "10\u001faMinor Latin Poets, Volume II: Florus. Hadrian. Nemesianus. Reposianus. Tiberianus. Dicta Catonis. Phoenix. Avianus. Rutilius Namatianus. Others (Loeb Classical Library).\u001e",
-      " 1\u001fbLoeb Classical Library,\u001fc1934.\u001e",
-      "  \u001fa432  p.\u001e",
-      "  \u001faMinor Latin Poets, Volume II: Florus. Hadrian. Nemesianus. Reposianus. Tiberianus. Dicta Catonis. Phoenix. Avianus. Rutilius Namatianus. Others (Loeb Classical Library) by Minor Latin Poets (1934)\u001e",
-      "  \u001faLoeb\u001e",
-      "  \u001faYour library\u001e",
-      "\u001d",
-      "MDA4MzEgICAgIDIyMDAxOTMgaSA0NTAwMDAxMDAwOTAwMDAwMDAzMDAwNzAwMDA5MDA1MDAxNzAw\n",
-      "\n",
-      "MDE2MDIwMDAxNTAwMDMzMDQwMDAyNDAwMDQ4MDkwMDAzMDAwMDcyMDkyMDAxMTAwMTAyMTAwMDAy\n",
-      "\n",
-      "NDAwMTEzMjQ1MDE3NjAwMTM3MjY0MDA4MzAwMzEzMzAwMDAxMjAwMzk2NTIwMDIwMzAwNDA4OTIw\n",
-      "\n",
-      "MDAwOTAwNjExOTIzMDAxNzAwNjIwHjY1Mjc3NDAyHk1lUG9MVB4yMDI1MDUwOTE4MjE0MS4wHiAg\n",
-      "\n",
-      "H2EwNjc0OTkzMTQ0HiAgH2FNZVBvTFQfY01lUG9MVB9lcmRhHiA0H2FMT0VCLVBBIDYxMjEgLkE0\n",
-      "\n",
-      "IDE5MzUgdi4xHiA0H2E4NzEuMDEeMSAfYVBvZXRzLCBNaW5vciBMYXRpbi4eMTAfYU1pbm9yIExh\n",
-      "\n",
-      "dGluIFBvZXRzLCBWb2x1bWUgSSwgUHVibGlsaXVzIFN5cnVzLiBFbGVnaWVzIG9uIE1hZWNlbmFz\n",
-      "\n",
-      "LiBHcmF0dGl1cy4gQ2FscHVybml1cyBTaWN1bHVzLiBMYXVzIFBpc29uaXMuIEVpbnNpZWRlbG4g\n",
-      "\n",
-      "RWNsb2d1ZXMuIEFldG5hIChMb2ViIENsYXNzaWNhbCBMaWJyYXJ5IE5vLiAyODQpLh4gMR9hTG9l\n",
-      "\n",
-      "YiBDbGFzc2ljYWwgTGlicmFyeSAoMTkzNCksIEVkaXRpb24fYiBSZXZpc2VkLCBIYXJkY292ZXIs\n",
-      "\n",
-      "IDQzMiBwYWdlcywfYzE5MzQuHiAgH2E0MzIgIHAuHiAgH2FNaW5vciBMYXRpbiBQb2V0cywgVm9s\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "flatten_mixed_marc(\"librarything_UMClassics.marc\")"
+    "flatten_mixed_marc(\"marc_test.marc\")"
    ]
   },
   {
